<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ceriseguo.demofunc.MainActivity">


    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/LogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:layout_below="@id/LogText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_a"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickA"
        android:id="@+id/Button_A"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_b"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Button_A"
        android:onClick="onClickB"
        android:id="@+id/Button_B"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_c"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Button_B"
        android:onClick="onClickC"
        android:id="@+id/Button_C"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_d"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Button_C"
        android:onClick="onClickD"
        android:id="@+id/Button_D"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_e"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Button_D"
        android:onClick="onClickE"
        android:id="@+id/Button_E"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_f"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Button_E"
        android:onClick="onClickF"
        android:id="@+id/Button_F"
        />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button_g"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Button_F"
        android:onClick="onClickG"
        android:id="@+id/Button_G"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_unknown" />

</RelativeLayout>
